<resources>
    <string name="app_name">Egoya  Farms</string>
    <string name="title_activity_order_page">orderPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_log_out">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_catfish">Catfish</string>
    <string name="menu_snails">Snails</string>
    <string name="menu_share">Share</string>
    <string name="menu_recent">Recent Activity</string>
    <string name="menu_about">About</string>
    <string name="menu_info">Contact Info</string>
    <string name="title_activity_home_page">HomePage</string>
</resources>
