<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_catfish"
            android:icon="@drawable/catfish"
            android:title="@string/menu_catfish" />
        <item
            android:id="@+id/nav_snails"
            android:icon="@drawable/snail"
            android:title="@string/menu_snails" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Recent Activity" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_icon"
                android:title="About" />
            <item
                android:id="@+id/nav_contact_info"
                android:icon="@drawable/contact_info"
                android:title="Contact Info" />

        </menu>
    </item>

</menu>
